clusters/production/vikunja/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vikunja
  labels:
    name: vikunja
    owner: nederhrj
